--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "init": "sequelize db:create",
-    "test": "NODE_ENV=test jest",
-    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=production jest",
+    "dev": "NODE_ENV=production nodemon index.js",
     "start": "NODE_ENV=production node index.js"
   },
   "repository": {
